<resources>
    <string name="app_name">Teamy</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="welcome_to_timey">Welcome to timey</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="select_date">Select date:</string>
    <string name="wrong_uid_or_pwd">Wrong user name or password</string>
    <string name="pls_enter_pwd">Please Enter Password</string>
    <string name="pls_enter_valid_email">Please Enter Valid Email</string>
    <string name="pwd_length_validation_message">\"Password Length must be more than \"</string>
    <string name="characters">characters</string>
    <string name="exit">Exit</string>
    <string name="calendar">calendar</string>
    <string name="preferences">preferences</string>
    <string name="leaving">Leaving?</string>
    <string name="cancel">Cancel</string>
    <string name="first_name_key" />
    <string name="last_name">Last name</string>
    <string name="language_key">eng</string>
    <string name="language">Language</string>
    <string name="chose_language">Chose language to be used</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>
    <string name="last_name_key">last_name_key</string>
    <string name="ok">Ok</string>
    <string name="logout">Logout</string>
    <string name="track">Track</string>
    <string name="pass_to_short">Password to short</string>
    <string name="pls_enter_valid_pwd">Please enter valid password</string>
    <string name="first_name">First name</string>
    <string name="pls_enter_first_name">Please enter first name</string>
    <string name="psl_enter_last_name">Please enter last name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register_failed">Register failed</string>
    <string name="pass_dont_match">Passwords don\'t match</string>
    <string name="password_validation_massage">"Password must contain at least one digit, lower case letter, upper case letter, special character[?=\\S+\$], must be longer then 8 characters"</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="total_time">Total time</string>
    <string name="user">User</string>
    <string name="stop_time">Stop time</string>
    <string name="place_holder_time">00:00:00</string>
    <string name="saveTime">Save Time</string>
    <string name="stop">Stop time</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="succesful_register_message">Successful register, login now!</string>
    <string name="register_fail_message">Register failed</string>
    <string name="myTeams">My Teams</string>
    <string name="createTeam">Create team</string>
    <string name="newTeam">New Team</string>
    <string name="save">Save</string>
    <string name="joinTeam">Join team</string>
    <string name="teamInvites">Team invites</string>
    <string name="teamCreatedSucessfuly">Team created</string>
    <string name="delete">delete</string>
    <string name="yes">yes</string>
    <string name="successful_delete">successful delete</string>
    <string name="addNewTeam">add new team</string>
    <string name="teams">Teams</string>
    <string name="invites">Invites</string>
    <string name="request_to_join">Request to join</string>
    <string name="request_sent">Request sent</string>
    <string name="failed_to_send_request">Failed to send request</string>
    <string name="request">Requests</string>
    <string name="invitations">Invitations</string>
    <string name="join_team">Join team</string>
    <string name="requests_from_users">Requests from users:</string>
    <string name="invite_someone">Invite someone!</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="select_your_team">Select your team</string>
    <string name="send_request">Send request</string>
    <string name="please_enter_team_name">Please enter team name</string>
    <string name="request_not_sent">Request not sent</string>
    <string name="wrong_team_entered">Wrong team entered</string>
    <string name="email_not_entered">Email not entered</string>
    <string name="team_name_not_entered">Team name not entered</string>
    <string name="sending_accept">Sending accept</string>
    <string name="sending_decline">Sending decline</string>
    <string name="enter_your_email">Enter your email</string>
</resources>