<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/invite_someone"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksText"
        android:hint="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <!--TODO: autocomlete serch users to invite-->

    <AutoCompleteTextView
        android:id="@+id/etTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:hint="@string/enter_team_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/btnInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/send_request"
        android:textAllCaps="false" />


    <TextView
        android:id="@+id/tvInvites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTeamName"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/invites"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/header"
        android:textColor="@android:color/black"
        android:layout_marginStart="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teams"
        android:layout_below="@id/tvInvites"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invitesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />



</RelativeLayout>

