<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/myTeams"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksText"
        android:hint="@string/newTeam"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teamsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksText"
        android:layout_marginTop="100dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fap_btn_teams"
        android:contentDescription="@string/addNewTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:src="@drawable/ic_baseline_add_24" />

</RelativeLayout>

