<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/join_team"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/etTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksText"
        android:hint="@string/enter_team_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <!--TODO: autocomlete serch team to join-->



    <Button
        android:id="@+id/btnJoinTeam"
        android:text="@string/request_to_join"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="@android:color/holo_green_dark"
        />

    <TextView
        android:id="@+id/tvRequestsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTeamName"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/request_to_join"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invitesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRequestsHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />



</RelativeLayout>

